@@ -64,3 +64,5 @@ Parallel::ForkManager = 0
 Path::Class = 0
 Test::Output = 0
 Test::Taint = 0
+
+[=CheckGeneratedCodeIsPresent]
